# AirBoy

./: .gitignore  README.md  rgb565.py  todo.md
components/airboy_display/: CMakeLists.txt
components/airboy_display/include/: airboy_display.h  airboy_display_framebuffer.h  airboy_display_primitives.h
components/airboy_display/src/: airboy_display.c  airboy_display_framebuffer.c  airboy_display_primitives.c  ili9341.c  primitives.c
components/airboy_math/: CMakeLists.txt
components/airboy_shapes/: CMakeLists.txt
components/airboy_vector/: CMakeLists.txt
components/airboy_viewport/: CMakeLists.txt
hardware/: Esp_Console.kicad_sym  audio.kicad_sch  audio.sch  esp_console-cache.lib  esp_console.kicad_pcb  esp_console.kicad_prl  esp_console.kicad_pro  esp_console.kicad_sch  esp_console.net  esp_console.pro  esp_console.sch  fp-info-cache  fp-lib-table  key_pad.kicad_sch  key_pad.sch  power.kicad_sch  power.sch  programmer.kicad_sch  programmer.sch  sym-lib-table
hardware/3D_Models/: DTSM_24.step  ili9341_2.8.step  switch.STEP  usbC.stp
hardware/Esp_Console.pretty/: DTSM-24.kicad_mod  LCD-ILI9341-2.8.kicad_mod  MAX98357A.kicad_mod  SKPM.kicad_mod
projects/blink/: CMakeLists.txt  sdkconfig
projects/chip8/: CMakeLists.txt  sdkconfig
projects/fire-demo/: CMakeLists.txt  sdkconfig  sdkconfig.old
projects/fire-demo/main/: CMakeLists.txt  fire-demo.c
projects/mijaker/: sdkconfig  sdkconfig.old
src/: array.c  array.h  display.c  display.h  input.c  input.h  macros.h  sdcard.c  sdcard.h  sprite.c  sprite.h  text.c  text.h  todo.md
(+66 files in other folders)
